# sama

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CustomGameEngine.md  README.md  a.out  project.json
android/: AndroidManifest.xml  CMakeLists.txt  build_aab.sh  build_android.sh  build_apk.sh  compile_shaders.sh  create_debug_keystore.sh
apps/android_test/: AndroidTestGame.cpp  project.json
apps/animation_demo/: main.mm
apps/audio_demo/: main.mm
apps/helmet_demo/: main.mm
apps/hierarchy_demo/: README.md  main.mm
apps/ik_demo/: main.mm
apps/ik_hand_demo/: main.mm
apps/ios_test/: IosTestGame.mm  main.mm  project.json
apps/perf_smoke/: PerfSmokeGame.cpp  PerfSmokeGame.h  main.mm  project.json  run_both.sh
apps/physics_demo/: PhysicsGame.cpp  PhysicsGame.h  main.mm  main_v2.mm
apps/scene_demo/: README.md  main.mm
apps/size_test/: size_test_3d.mm  size_test_full.mm  size_test_minimal.mm
apps/ui_test/: UiTestApp.cpp  UiTestApp.h  main.mm
assets/: Fox.events.json  Fox.statemachine.json
assets/env/: default.env  test_cubemap.ktx  test_sky.hdr
assets/fonts/: ChunkFive-msdf.json  JetBrainsMono-msdf.json  README.md
cmake/: SamaForbidBgfx.cmake  SamaForbidBgfxRun.cmake  SamaIosAssets.cmake  ios.toolchain.cmake
docs/: AGENTS.md  AI_NATIVE.md  ANDROID_SUPPORT.md  ANIMATION_ARCHITECTURE.md  ASSET_ARCHITECTURE.md  AUDIO_ARCHITECTURE.md  BINARY_SIZES.md  ECS_ARCHITECTURE.md  EDITOR_ARCHITECTURE.md  ENGINE_OVERVIEW.html  FRAME_ANATOMY.md  GAME_LAYER_ARCHITECTURE.md  IK_ARCHITECTURE.md  INPUT_ARCHITECTURE.md  IOS_SUPPORT.md  JSON_ARCHITECTURE.md  LEVEL_BUILDING_GUIDE.md  MATH_ARCHITECTURE.md  MEMORY_ARCHITECTURE.md  NOTES.md  PERF_AUDIT_2026-05-25.md  PHYSICS_ARCHITECTURE.md  RENDERING_ARCHITECTURE.md  SCENE_GRAPH_ARCHITECTURE.md  SCREENSHOT_TEST_WALKTHROUGH.md  SLUG_NEXT_STEPS.md  THREADING_ARCHITECTURE.md  bgfx_upstream_issue.md  bgfx_upstream_pr.md
docs/upstream-prs/: README.md  bgfx-shadow-requested-resolution.md  bgfx-treat-suboptimal-as-success.md
editor/: BuildPhaseParser.h  EditorApp.cpp  EditorApp.h  EditorLog.cpp  EditorLog.h  EditorState.h  SelectionOutline.h  main.mm
editor/gizmo/: GizmoRenderer.cpp  GizmoRenderer.h  TransformGizmo.cpp  TransformGizmo.h
editor/inspectors/: ColliderInspector.cpp  ColliderInspector.h  LightInspector.cpp  LightInspector.h  MaterialInspector.cpp  MaterialInspector.h  NameInspector.cpp  NameInspector.h  RigidBodyInspector.cpp  RigidBodyInspector.h  TransformInspector.cpp  TransformInspector.h
editor/panels/: AnimationPanel.cpp  AnimationPanel.h  AssetBrowserPanel.cpp  AssetBrowserPanel.h  ConsolePanel.cpp  ConsolePanel.h  HierarchyPanel.cpp  HierarchyPanel.h  IComponentInspector.h  IEditorPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  ResourcePanel.cpp  ResourcePanel.h
editor/platform/: IEditorWindow.h
editor/undo/: CommandStack.cpp  CommandStack.h  CreateEntityCommand.cpp  CreateEntityCommand.h  DeleteEntityCommand.cpp  DeleteEntityCommand.h  ICommand.h  SetTransformCommand.cpp  SetTransformCommand.h
engine/animation/: AnimStateMachine.cpp  AnimStateMachine.h  AnimStateMachineSystem.cpp  AnimStateMachineSystem.h  AnimationClip.h  AnimationComponents.h  AnimationEventQueue.h  AnimationResources.cpp  AnimationResources.h  AnimationSampler.cpp  AnimationSampler.h  AnimationSerializer.cpp  AnimationSerializer.h  AnimationSystem.cpp  AnimationSystem.h  FootIkHelper.cpp  FootIkHelper.h  Hash.h  IkComponents.h  IkSolvers.cpp  IkSolvers.h  IkSystem.cpp  IkSystem.h  LookAtHelper.h  Pose.h  Skeleton.h
engine/assets/: AssetHandle.h  AssetManager.cpp  AssetManager.h  AssetState.h  CompressedTextureLoader.cpp  CompressedTextureLoader.h  CpuAssetData.h  CubemapLoader.cpp  CubemapLoader.h  EnvironmentAsset.h  EnvironmentAssetSerializer.cpp  EnvironmentAssetSerializer.h  GltfAsset.h  GltfLoader.cpp  GltfLoader.h  GltfSceneSpawner.cpp  GltfSceneSpawner.h  HdrLoader.cpp  HdrLoader.h  IAssetLoader.h  IFileSystem.h  ObjLoader.cpp  ObjLoader.h  StdFileSystem.cpp  StdFileSystem.h  Texture.h  TextureLoader.cpp  TextureLoader.h  TierAssetResolver.cpp  TierAssetResolver.h
engine/audio/: AudioComponents.h  AudioSystem.cpp  AudioSystem.h  IAudioEngine.h  NullAudioEngine.h  SoLoudAudioEngine.cpp  SoLoudAudioEngine.h
engine/core/: Engine.cpp  Engine.h  OrbitCamera.h  TransparentHash.h
engine/debug/: DebugTexturePanel.cpp  DebugTexturePanel.h
engine/ecs/: Entity.h  Registry.cpp  Registry.h  Schedule.h  SparseSet.h  System.h  SystemExecutor.h  TypeList.h  View.h
engine/game/: GameRunner.cpp  GameRunner.h  IGame.h  ProjectConfig.cpp  ProjectConfig.h
engine/input/: ActionMap.cpp  ActionMap.h  ActionMapJson.cpp  ActionMapJson.h  GestureRecognizer.cpp  GestureRecognizer.h  IInputBackend.h  InputState.cpp  InputState.h  InputSystem.cpp  InputSystem.h  Key.h  NullInputBackend.h  RawEvent.h
engine/io/: Json.cpp  Json.h
engine/math/: All.h  Config.h  Frustum.h  Math.h  Simd.h  Transform.h  Types.h
engine/memory/: FrameArena.cpp  FrameArena.h  InlinedVector.h  PoolAllocator.h
engine/physics/: IPhysicsEngine.h  JoltContactListener.cpp  JoltContactListener.h  JoltLayerConfig.cpp  JoltLayerConfig.h  JoltPhysicsEngine.cpp  JoltPhysicsEngine.h  PhysicsComponents.h  PhysicsConversions.h  PhysicsSystem.cpp  PhysicsSystem.h
engine/platform/: Window.h
engine/rendering/: AndroidVulkanFormatProbe.cpp  AndroidVulkanFormatProbe.h  CsmSplitCalculator.cpp  CsmSplitCalculator.h  EcsComponents.h  FrameStats.cpp  FrameStats.h  GpuFeatures.cpp  GpuFeatures.h  HandleTypes.h  IblResources.cpp  IblResources.h  LightClusterBuilder.cpp  LightClusterBuilder.h  LightData.h  Material.h  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  (+24 more)
ios/: Info.plist.in  build_ios.sh  smoke_asset_tool.sh
patches/: bgfx_android_mailbox_present.patch  bgfx_android_vk_call_timing.patch  bgfx_android_vk_clamped_resolution_no_recreate.patch  bgfx_android_vk_suboptimal_no_recreate.patch  bgfx_emulator_compat.patch  bgfx_imgui_default_font.patch  bgfx_mali_shadow_fix.patch  bgfx_swapchain_fix.patch  sama_skybox_metal_camera_pos_fix.patch
(+614 files in other folders)
